# langchain_pilot

Documentation/: Curie on Will-call website.docx
langchain_pilot/: .gitignore  Episode_11.md  README.md  curie_b1.py  fb_test.py  langchain1.py  prompt_temp_1.py  pyproject.toml  yt_summer.py
